[project]
name = "docker-luna-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gunicorn>=23.0.0",
    "pyeleven",
]

[tool.uv.sources]
pyeleven = { git = "https://github.com/IdentityPython/pyeleven.git", rev = "v0.0.2" }
